welcome.lessons.welcome.array.island.Island.scala.error
island:2: error: type mismatch;
 found   : Int
 required: Array[Int]
	var T:Array[Int]=(num.length)
                              ^island:3: error: value lenght is not a member of Array[Int]
	for (i<- 0 to num.lenght-1) {
                          ^